--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -7,12 +7,15 @@
     "module": "commonjs",
     "baseUrl": ".",
     "paths": {
-      "app/*": ["app/*"]
+      "@/*": ["./*"],
+      "@common/*": ["../packages/common/*"],
+			"@app/*": ["./app/*"]
     },
     "sourceMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    
   }
 }
