--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -8,7 +8,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "@common/*": ["../packages/common/*"],
+      "@common/*": ["../../packages/common/*"],
 			"@app/*": ["./app/*"]
     },
     "sourceMap": true,
