add flippedCrds to gamne state

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "workbench.colorTheme": "Gruvbox Light Soft",
+  "workbench.colorTheme": "Theme Darker",
   "workbench.startupEditor": "none",
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
