--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "tsc",
-		"start": "node build/apps/backend/app/index.js",
+		"start": "node dist/index.js",
 		"dev": "ts-node-dev app/index.ts"
 	},
 	"keywords": [],
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"express": "^4.21.2",
+		"@memory-game/common": "workspace:*",
 		"socket.io": "^4.8.1"
 	},
 	"devDependencies": {
