--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "@memory-game/client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --port 7070",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.5",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "axios": "^1.7.9",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.4.10",
-    "lucide-react": "^0.474.0",
-    "next": "14.2.23",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.54.2",
-    "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "@memory-game/client",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --port 7070",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.5",
+		"@radix-ui/react-label": "^2.1.1",
+		"@radix-ui/react-slot": "^1.1.1",
+		"axios": "^1.7.9",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"framer-motion": "^12.4.10",
+		"lucide-react": "^0.474.0",
+		"@memory-game/common": "workspace:*",
+		"next": "14.2.23",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.54.2",
+		"socket.io-client": "^4.8.1",
+		"tailwind-merge": "^2.6.0",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
