--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -1,8 +1,11 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
@@ -19,12 +22,24 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"],
-      "@common/*": ["../../packages/common/*"],
-			"@components/*": ["./components/*"],
-			"@app/*": ["./app/*"]
-    }
+      "@/*": [
+        "./*"
+      ],
+      "@common/*": [
+        "../../packages/common/src/*"
+      ],
+      "@components/*": [
+        "./components/*"
+      ],
+      "@app/*": [
+        "./app/*"
+      ]
+    },
+    "allowJs": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "references": [
+    { "path": "../../packages/common" }
+  ]
 }
