--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
 	"scripts": {
 		"client": "pnpm --filter @memory-game/client run dev",
 		"backend": "pnpm --filter @memory-game/backend run dev",
-		"build": "pnpm -r build",
 		"format": "pnpm biome write",
-		"check-types": "tsc --noEmit"
+		"check-types": "tsc --noEmit",
+		"build": "turbo run build",
+		"dev": "turbo run dev",
+		"lint": "turbo run lint",
+		"test": "turbo run test",
+		"clean": "turbo run clean"
 	},
 	"keywords": [],
 	"author": "",
