--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "@memory-game/shared",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+	"name": "@memory-game/common",
+	"version": "0.1.0",
+	"private": true,
+	"main": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"scripts": {
+		"build": "tsc",
+		"dev": "tsc --watch"
+	},
+	"devDependencies": {
+		"@types/node": "^18.15.0",
+		"eslint": "^8.36.0",
+		"typescript": "^5.2.2"
+	}
 }
