--- a/turbo.json
+++ b/turbo.json
@@ -1,19 +1,20 @@
 {
 	"$schema": "https://turbo.build/schema.json",
+	"globalDependencies": [".env"],
 	"tasks": {
 		"build": {
 			"dependsOn": ["^build"],
-			"outputs": [
-				"apps/client/.next/**",
-				"!apps/client/.next/cache/**",
-				"apps/backend/build/**"
-			]
-		},
-		"check-types": {
-			"dependsOn": ["^check-types"]
+			"outputs": ["dist/**", ".next/**", "build/**"]
 		},
 		"dev": {
-			"persistent": true,
+			"cache": false,
+			"persistent": true
+		},
+		"lint": {},
+		"test": {
+			"dependsOn": ["build"]
+		},
+		"clean": {
 			"cache": false
 		}
 	}
