--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
 		"dev": "turbo run dev",
 		"lint": "turbo run lint",
 		"test": "turbo run test",
-		"clean": "turbo run clean",
-		"start": "turbo run start --parallel"
+		"clean": "turbo run clean"
 	},
 	"keywords": [],
 	"author": "",
