--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"dev": "turbo run dev",
 		"lint": "turbo run lint",
 		"test": "turbo run test",
-		"clean": "turbo run clean"
+		"clean": "turbo run clean",
+		"start-all": "concurrently \"cd apps/backend && node dist/index.js\" \"cd apps/client && pnpm run start\""
 	},
 	"keywords": [],
 	"author": "",
@@ -21,6 +22,7 @@
 		"biome": "^0.3.3"
 	},
 	"devDependencies": {
+		"concurrently": "^9.1.2",
 		"turbo": "^2.4.0"
 	},
 	"packageManager": "pnpm@9.14.1"
