--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -26,7 +26,7 @@
         "./*"
       ],
       "@common/*": [
-        "../../packages/common/src/*"
+        "./types/*"
       ],
       "@components/*": [
         "./components/*"
@@ -38,8 +38,5 @@
     "allowJs": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"],
-  "references": [
-    { "path": "../../packages/common" }
-  ]
+  "exclude": ["node_modules"]
 }
