--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "next dev --port 7070",
 		"build": "next build",
-		"start": "next start",
+		"start": "next start --port 7070",
 		"lint": "next lint"
 	},
 	"dependencies": {
