--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -21,5 +21,8 @@
 		"@types/node": "^20",
 		"prisma": "^6.5.0",
 		"typescript": "^5.8.2"
+	},
+	"prisma": {
+		"schema": "./app/prisma/schema.prisma"
 	}
 }
