--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -5,7 +5,7 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"build": "tsc",
+		"build": "prisma migrate deploy && prisma generate && tsc",
 		"db:generate": "prisma generate",
 		"db:push": "prisma db push",
 		"dev": "tsc -w"
