--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"biome": "^0.3.3"
 	},
 	"devDependencies": {
+		"cross-env": "^7.0.3",
 		"turbo": "^2.4.0"
 	},
 	"packageManager": "pnpm@9.14.1"
