database url on backend start

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "cross-env-shell \"DATABASE_URL=$DATABASE_URL pnpm --filter=@memory-game/database build && tsc\"",
-		"start": "pnpm --filter=@memory-game/database exec prisma migrate deploy && node dist/index.js",
+		"start": "cross-env-shell \"DATABASE_URL=$DATABASE_URL pnpm --filter=@memory-game/database exec prisma migrate deploy && node dist/index.js\"",
 		"dev": "ts-node-dev app/index.ts"
 	},
 	"keywords": [],
