--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -14,7 +14,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@prisma/client": "^6.5.0",
+		"@prisma/client": "^6.6.0",
+		"@prisma/extension-accelerate": "^1.3.0",
 		"dotenv": "^16.4.7"
 	},
 	"devDependencies": {
