--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -5,16 +5,17 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"build": "prisma migrate deploy && prisma generate && tsc",
-		"db:generate": "prisma generate",
-		"db:push": "prisma db push",
+		"migrate": "prisma migrate deploy && prisma generate",
+		"dev:migrate": "prisma migrate dev --name init && prisma generate",
+		"generate": "prisma generate",
+		"build": "tsc",
 		"dev": "tsc -w"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@prisma/client": "^6.6.0",
+		"@prisma/client": "^6.5.0",
 		"@prisma/extension-accelerate": "^1.3.0",
 		"dotenv": "^16.4.7"
 	},
