--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -5,9 +5,10 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
+		"dev:migrate": "dotenv -e .env -- prisma migrate dev --name init && prisma generate",
+		"prod:migrate": "prisma generate && prisma migrate deploy",
+		"generate": "dotenv -e .env -- prisma generate",
 		"migrate": "prisma migrate deploy && prisma generate",
-		"dev:migrate": "prisma migrate dev --name init && prisma generate",
-		"generate": "prisma generate",
 		"build": "tsc",
 		"dev": "tsc -w"
 	},
