--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 		"build": "turbo run build",
 		"dev": "turbo run dev",
 		"lint": "turbo run lint",
-		"test": "turbo run test",
-		"clean": "turbo run clean"
+		"db:generate": "turbo run db:generate",
+		"db:migrate:dev": "turbo run db:migrate:dev",
+		"db:migrate:deploy": "turbo run db:migrate:deploy",
+		"db:seed": "turbo run db:seed"
 	},
 	"keywords": [],
 	"author": "",
