--- a/turbo.json
+++ b/turbo.json
@@ -1,25 +1,31 @@
 {
 	"$schema": "https://turbo.build/schema.json",
-	"globalDependencies": [".env"],
+	"globalDependencies": ["**/.env.*local"],
 	"tasks": {
 		"build": {
-			"dependsOn": ["^build"],
-			"outputs": ["dist/**", "build/**", ".next/**"]
+			"dependsOn": ["^build", "^db:generate"],
+			"outputs": ["dist/**", ".next/**", "!.next/cache/**"]
 		},
+		"lint": {},
 		"dev": {
 			"cache": false,
-			"persistent": true
+			"persistent": true,
+			"dependsOn": ["^db:generate"]
 		},
-		"lint": {
-			"outputs": []
+		"db:generate": {
+			"cache": false
 		},
-		"test": {
-			"dependsOn": ["build"],
-			"outputs": []
-		},
-		"clean": {
+		"db:migrate:dev": {
 			"cache": false,
-			"outputs": []
+			"dependsOn": ["^db:generate"]
+		},
+		"db:migrate:deploy": {
+			"cache": false,
+			"dependsOn": ["^db:generate"]
+		},
+		"db:seed": {
+			"cache": false,
+			"dependsOn": ["^db:generate", "^db:migrate:deploy"]
 		}
 	}
 }
