--- a/render.yaml
+++ b/render.yaml
@@ -9,5 +9,7 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+      - key: DATABASE_URL
+        sync: false
       - key: PRISMA_ACCELERATE_URL
-        sync: false 
+        sync: false
