--- a/render.yaml
+++ b/render.yaml
@@ -3,13 +3,20 @@ services:
     name: memory-game-backend
     env: node
     rootDir: apps/backend
-    buildCommand: cd ../.. && pnpm install --frozen-lockfile && pnpm turbo build --filter=backend... && pnpm turbo db:migrate:deploy --filter=@memory-game/database
+    buildCommand: |
+      cd ../.. &&
+      pnpm install --frozen-lockfile &&
+      # Set DATABASE_URL to DIRECT_URL specifically for migrations
+      DATABASE_URL="$DIRECT_URL" pnpm turbo db:migrate:deploy --filter=@memory-game/database &&
+      pnpm turbo build --filter=backend...
     startCommand: cd ../.. && pnpm start --filter=backend
     autoDeploy: true
     envVars:
       - key: NODE_ENV
         value: production
       - key: DATABASE_URL
+        sync: false
+      - key: DIRECT_URL
         sync: false
       - key: PRISMA_ACCELERATE_URL
         sync: false
