--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -9,7 +9,7 @@
 		"dev": "tsc -w",
 		"db:generate": "prisma generate",
 		"db:migrate:dev": "prisma migrate dev",
-		"db:migrate:deploy": "prisma migrate deploy",
+		"db:migrate:deploy": "./migrate-deploy.sh",
 		"db:seed": "ts-node ./seed.ts"
 	},
 	"keywords": [],
