--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
 		"backend": "pnpm --filter @memory-game/backend run dev",
 		"format": "pnpm biome write",
 		"check-types": "tsc --noEmit",
-		"build": "turbo run build",
-		"dev": "turbo run dev",
-		"lint": "turbo run lint",
-		"db:generate": "turbo run db:generate",
-		"db:migrate:dev": "turbo run db:migrate:dev",
-		"db:migrate:deploy": "turbo run db:migrate:deploy",
-		"db:seed": "turbo run db:seed"
+		"build": "pnpm -r build --filter=!backend",
+		"postbuild": "cd apps/backend && pnpm build",
+		"dev": "pnpm -r dev",
+		"lint": "pnpm -r lint",
+		"db:generate": "pnpm --filter @memory-game/database run db:generate",
+		"db:migrate:dev": "pnpm --filter @memory-game/database run db:migrate:dev",
+		"db:migrate:deploy": "pnpm --filter @memory-game/database run db:migrate:deploy",
+		"db:seed": "pnpm --filter @memory-game/database run db:seed"
 	},
 	"keywords": [],
 	"author": "",
@@ -23,8 +24,7 @@
 		"biome": "^0.3.3"
 	},
 	"devDependencies": {
-		"cross-env": "^7.0.3",
-		"turbo": "^2.4.0"
+		"cross-env": "^7.0.3"
 	},
 	"packageManager": "pnpm@9.14.1"
 }
