--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build": "tsc",
+		"build": "tsc && cp -r ./data ./dist/data",
 		"dev": "ts-node-dev --respawn --transpile-only app/index.ts",
 		"start": "node dist/index.js",
 		"db:migrate:deploy": "cd ../../packages/database && pnpm db:migrate:deploy"
