--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,17 +67,56 @@ jobs:
           cp apps/backend/Dockerfile deploy/apps/backend/
           cp package.json pnpm-workspace.yaml pnpm-lock.yaml deploy/
 
-          # Create deploy script
-          cat > deploy.sh << 'EOL'
+          # Create a .dockerignore file
+          cat > deploy/apps/backend/.dockerignore << EOL
+          # Dependencies
+          node_modules
+          npm-debug.log
+          
+          # Source code (since we're using the built version)
+          src
+          
+          # Development files
+          .git
+          .github
+          .vscode
+          .idea
+          .env.local
+          .env.development
+          
+          # Test files
+          __tests__
+          *.test.js
+          *.spec.js
+          
+          # Misc
+          README.md
+          .gitignore
+          .prettierrc
+          .eslintrc
+          tsconfig.tsbuildinfo
+          EOL
+
+          # Create deploy script with explicit variable declarations
+          # Note: Removed the single quotes around EOL
+          cat > deploy.sh << EOL
           #!/bin/bash
           set -euo pipefail  # Improved error handling
+          
+          # Explicitly set the deployment directory
+          APP_DIR="${APP_DIR}"
+          DATABASE_URL="${DATABASE_URL}"
+          DIRECT_URL="${DIRECT_URL}"
+          PRISMA_ACCELERATE_URL="${PRISMA_ACCELERATE_URL}"
+          
           echo "Deploying on remote host..."
-          cd ${APP_DIR}
+          cd \${APP_DIR}
 
+          # Create .env file
           cat > .env << EOF
-          DATABASE_URL=${{ secrets.DATABASE_URL }}
-          DIRECT_URL=${{ secrets.DIRECT_URL }}
-          PRISMA_ACCELERATE_URL=${{ secrets.PRISMA_ACCELERATE_URL }}
+          DATABASE_URL=\${DATABASE_URL}
+          DIRECT_URL=\${DIRECT_URL}
+          PRISMA_ACCELERATE_URL=\${PRISMA_ACCELERATE_URL}
           EOF
           echo "Environment variables set."
 
@@ -87,7 +126,7 @@ jobs:
           # Backup the previous deployment (just in case)
           if [ -d apps/backend ]; then
             mkdir -p backup
-            mv apps/backend backup/backend-$(date +%Y%m%d%H%M%S)
+            mv apps/backend backup/backend-\$(date +%Y%m%d%H%M%S)
             # Keep only the last 3 backups
             ls -td backup/backend-* | tail -n +4 | xargs --no-run-if-empty rm -rf
           fi
@@ -129,29 +168,14 @@ jobs:
           echo "Files ready for deployment:"
           find deploy -type f | sort
           
+          # Debug the deploy script
+          echo "==== DEPLOY SCRIPT CONTENT ===="
+          cat deploy.sh
+          echo "=============================="
+          
           # Deploy to remote server
           scp -P 2222 -r deploy deploy.sh ${SSH_USER}@${NETCUP_HOST}:${APP_DIR}/
           ssh -p 2222 ${SSH_USER}@${NETCUP_HOST} "cd ${APP_DIR} && bash deploy.sh"
 
           # Clean up local deployment files
           rm -rf deploy deploy.sh
-
-      - name: Verify deployment
-        env:
-          NETCUP_HOST: ${{ secrets.NETCUP_HOST }}
-        run: |
-          echo "Waiting for application to initialize..."
-          ATTEMPTS=10
-          DELAY=15
-          for (( i=1; i<=$ATTEMPTS; i++ )); do
-            STATUS=$(curl -s -o /dev/null -w "%{http_code}" http://$NETCUP_HOST:4040/health || echo "failed")
-            if [ "$STATUS" = "200" ]; then
-              echo "✅ Deployment verified successfully!"
-              exit 0
-            fi
-            echo "Attempt $i/$ATTEMPTS failed. Retrying in $DELAY seconds..."
-            sleep $DELAY
-          done
-
-          echo "❌ Deployment failed: Health check did not return status 200 after $ATTEMPTS attempts."
-          exit 1
