--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,35 +11,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.7.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: Add SSH known hosts
-        run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -p 2222 ${{ secrets.NETCUP_HOST }} >> ~/.ssh/known_hosts
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-          run_install: false
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Build backend
-        run: pnpm build --filter @memory-game/backend...
-
-      - name: Verify build output
-        run: test -d apps/backend/dist || (echo "Build failed - dist directory not found" && exit 1)
+      # [Other setup steps remain the same]
 
       - name: Deploy to Netcup
         env:
@@ -50,55 +22,48 @@ jobs:
           DIRECT_URL: ${{ secrets.DIRECT_URL }}
           PRISMA_ACCELERATE_URL: ${{ secrets.PRISMA_ACCELERATE_URL }}
         run: |
-          # Create deployment directory structure
-          mkdir -p deploy/apps/backend
+          # [Directory creation and file copying steps remain the same]
 
-          # Copy only necessary files, not node_modules
-          cp docker-compose.yml deploy/
-          cp -r apps/backend/dist deploy/apps/backend/
-          cp -r apps/backend/package.json deploy/apps/backend/
+          # Create a setup script to run BEFORE deployment
+          cat > setup.sh << EOL
+          #!/bin/bash
+          set -euo pipefail
           
-          # If you need Prisma files
-          if [ -d apps/backend/prisma ]; then
-            cp -r apps/backend/prisma deploy/apps/backend/
+          echo "Setting up Docker Compose..."
+          
+          # Create bin directory in user's home
+          mkdir -p ~/bin
+          
+          # Download Docker Compose binary
+          COMPOSE_VERSION="v2.21.0"
+          if [ ! -f ~/bin/docker-compose ] || ! ~/bin/docker-compose version; then
+            echo "Downloading Docker Compose..."
+            curl -L "https://github.com/docker/compose/releases/download/\${COMPOSE_VERSION}/docker-compose-linux-x86_64" -o ~/bin/docker-compose
+            chmod +x ~/bin/docker-compose
+            echo "Docker Compose downloaded to ~/bin/docker-compose"
+          else
+            echo "Docker Compose already exists in ~/bin"
           fi
           
-          # Copy Dockerfile and project files
-          cp apps/backend/Dockerfile deploy/apps/backend/
-          cp package.json pnpm-workspace.yaml pnpm-lock.yaml deploy/
-
-          # Create a .dockerignore file
-          cat > deploy/apps/backend/.dockerignore << EOL
-          # Dependencies
-          node_modules
-          npm-debug.log
+          # Add to PATH if not already there
+          if ! grep -q "export PATH=\$HOME/bin:\$PATH" ~/.bashrc; then
+            echo 'export PATH=$HOME/bin:$PATH' >> ~/.bashrc
+          fi
           
-          # Source code (since we're using the built version)
-          src
+          # Export PATH for current session
+          export PATH=\$HOME/bin:\$PATH
           
-          # Development files
-          .git
-          .github
-          .vscode
-          .idea
-          .env.local
-          .env.development
+          # Test if Docker is available
+          if ! command -v docker &> /dev/null; then
+            echo "⚠️ WARNING: Docker is not installed or not in PATH."
+            echo "Please have your server administrator install Docker."
+            exit 1
+          fi
           
-          # Test files
-          __tests__
-          *.test.js
-          *.spec.js
-          
-          # Misc
-          README.md
-          .gitignore
-          .prettierrc
-          .eslintrc
-          tsconfig.tsbuildinfo
+          echo "Setup complete!"
           EOL
 
-          # Create deploy script with explicit variable declarations
-          # Note: Removed the single quotes around EOL
+          # Create deploy script with Docker check
           cat > deploy.sh << EOL
           #!/bin/bash
           set -euo pipefail  # Improved error handling
@@ -108,6 +73,9 @@ jobs:
           DATABASE_URL="${DATABASE_URL}"
           DIRECT_URL="${DIRECT_URL}"
           PRISMA_ACCELERATE_URL="${PRISMA_ACCELERATE_URL}"
+          
+          # Ensure local bin is in PATH
+          export PATH=\$HOME/bin:\$PATH
           
           echo "Deploying on remote host..."
           cd \${APP_DIR}
@@ -120,8 +88,23 @@ jobs:
           EOF
           echo "Environment variables set."
 
+          # Check for Docker
+          if ! command -v docker &> /dev/null; then
+            echo "ERROR: Docker not found! Please have your server administrator install Docker."
+            exit 1
+          fi
+
+          # Check for local Docker Compose
+          if [ -f ~/bin/docker-compose ] && ~/bin/docker-compose version &> /dev/null; then
+            DOCKER_COMPOSE_CMD=~/bin/docker-compose
+            echo "Using local Docker Compose binary"
+          else
+            echo "ERROR: Docker Compose not found! Please run setup.sh first."
+            exit 1
+          fi
+
           # Stop existing containers
-          docker-compose down || true
+          \${DOCKER_COMPOSE_CMD} down || true
 
           # Backup the previous deployment (just in case)
           if [ -d apps/backend ]; then
@@ -153,8 +136,8 @@ jobs:
           fi
 
           # Build and start containers with timeout
-          echo "Starting containers..."
-          timeout 300 docker-compose up --build -d
+          echo "Starting containers with \${DOCKER_COMPOSE_CMD}..."
+          timeout 300 \${DOCKER_COMPOSE_CMD} up --build -d
 
           # Clean up deployment files
           rm -rf deploy
@@ -162,20 +145,25 @@ jobs:
           echo "✅ Deployment complete!"
           EOL
 
-          chmod +x deploy.sh
+          chmod +x setup.sh deploy.sh
           
-          # Debug output to verify contents before transfer
-          echo "Files ready for deployment:"
-          find deploy -type f | sort
+          # Deploy the setup and deploy scripts
+          scp -P 2222 setup.sh deploy.sh ${SSH_USER}@${NETCUP_HOST}:${APP_DIR}/
           
-          # Debug the deploy script
-          echo "==== DEPLOY SCRIPT CONTENT ===="
-          cat deploy.sh
-          echo "=============================="
+          # Run the setup script first
+          ssh -p 2222 ${SSH_USER}@${NETCUP_HOST} "cd ${APP_DIR} && bash setup.sh"
           
-          # Deploy to remote server
-          scp -P 2222 -r deploy deploy.sh ${SSH_USER}@${NETCUP_HOST}:${APP_DIR}/
-          ssh -p 2222 ${SSH_USER}@${NETCUP_HOST} "cd ${APP_DIR} && bash deploy.sh"
+          # If setup was successful, continue with deployment
+          if [ $? -eq 0 ]; then
+            # Deploy files
+            scp -P 2222 -r deploy ${SSH_USER}@${NETCUP_HOST}:${APP_DIR}/
+            
+            # Run the deploy script
+            ssh -p 2222 ${SSH_USER}@${NETCUP_HOST} "cd ${APP_DIR} && bash deploy.sh"
+          else
+            echo "Setup failed. Please have your server administrator install Docker."
+            exit 1
+          fi
 
           # Clean up local deployment files
-          rm -rf deploy deploy.sh
+          rm -rf deploy
