generate prisma in docker

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -2,15 +2,12 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-# Copy backend files
 COPY apps/backend/dist ./apps/backend/dist
 COPY apps/backend/package.json ./apps/backend/
 
-# Copy database package files (add these lines)
+# Copy database package files
 COPY packages/database/dist ./packages/database/dist
 COPY packages/database/package.json ./packages/database/
-
-# If your database package needs the Prisma client, also copy the Prisma directory
 COPY packages/database/app/prisma ./packages/database/app/prisma
 
 # Copy workspace configuration files
@@ -21,5 +18,9 @@ RUN corepack enable && corepack prepare pnpm@9.14.1 --activate
 # Install only production deps
 RUN pnpm install --prod
 
+# Add this line to generate the Prisma client
+RUN npx prisma generate --schema=./packages/database/app/prisma/schema.prisma
+
 EXPOSE 4040
+CMD ["node", "apps/backend/dist/index.js"]
 CMD ["node", "apps/backend/dist/index.js"]
