--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@memory-game/common": "workspace:*",
 		"@radix-ui/react-dialog": "^1.1.5",
 		"@radix-ui/react-label": "^2.1.1",
 		"@radix-ui/react-radio-group": "^1.2.3",
