--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,14 +52,19 @@ jobs:
         run: |
           # Create deployment directory structure
           mkdir -p deploy/apps/backend
-          mkdir -p deploy/packages/database/app  # Add this line
+          mkdir -p deploy/packages/database/app
+          mkdir -p deploy/packages/common
 
           # Copy only necessary files, not node_modules
           cp docker-compose.yml deploy/
           cp -r apps/backend/dist deploy/apps/backend/
           cp -r apps/backend/package.json deploy/apps/backend/
           
-          # Copy database package files (add these lines)
+          # Copy common package files
+          cp -r packages/common/dist deploy/packages/common/
+          cp -r packages/common/package.json deploy/packages/common/
+          
+          # Copy database package files
           cp -r packages/database/dist deploy/packages/database/
           cp -r packages/database/package.json deploy/packages/database/
           cp -r packages/database/app/prisma deploy/packages/database/app/
@@ -148,6 +153,9 @@ jobs:
 
           # Move the database package
           mv deploy/packages/database packages/
+
+          # Move the common package
+          mv deploy/packages/common packages/
 
           # Move root level files
           if [ -f deploy/docker-compose.yml ]; then
